# logly

./: .gitignore  .mcp.json  CLAUDE.md  README.md  SPEC.md  analysis_options.yaml  codemagic.yaml  download_ios_icons.py  flutter_launcher_icons.yaml  flutter_native_splash.yaml  pubspec.yaml
.claude/: settings.json
.claude/commands/: commit.md  interview.md  next-task.md
.claude/hooks/: ensure-fvm.sh
.github/workflows/: main.yaml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: choppy-streaming-text.md  error-text-restoration.md  step-summary-disappearing.md
.planning/milestones/: v1-REQUIREMENTS.md  v1-ROADMAP.md
.planning/research/: STACK.md  (+4 more)
env/: .env.development  .env.production  .env.staging
ios/: Podfile
lib/: bootstrap.dart  main_development.dart  main_production.dart  main_staging.dart
specs/: 01-core.md  02-auth.md  03-subscriptions.md  04-activity-catalog.md  05-activity-logging.md  05a-custom-name-feature.md  06-home.md  07-profile.md  08-onboarding.md  09-settings.md  10-health-integration.md  11-ai-insights.md  BUILD_ORDER.md  overview.md
supabase/: .gitignore  activities.json  check_qualified_names.py  config.toml  create-users.mts  database.types.ts  seed.sql
supabase/legacy_migration/: pyproject.toml  user_activity_notes.txt
supabase/legacy_migration/legacy_migration/: activities.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+658 files in other folders)
