[tool.poetry]
name = "legacy-migration"
version = "0.1.0"
description = ""
authors = ["Rob Snider <rsnider@wisecode.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
mysql-connector = "^2.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
